src/objects/Payment_Processor__c.object
<CustomObject>
    <fields>
        <fullName>API_Login_Id__c</fullName>
        <inlineHelpText>Authorize.Net only, required API Login Id</inlineHelpText>
        <label>API Login Id</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>API_Password__c</fullName>
        <inlineHelpText>Paypal only, required password</inlineHelpText>
        <label>API Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>API_Signature__c</fullName>
        <inlineHelpText>Paypal only, required signature</inlineHelpText>
        <label>API Signature</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <inlineHelpText>Paypal only, required username field</inlineHelpText>
        <label>API Username</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Default_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use this payment processor connection by default when there are multiple connections available.</inlineHelpText>
        <label>Default Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Processor__c</fullName>
        <inlineHelpText>The payment gateway/processor to which these API credentials apply</inlineHelpText>
        <label>Payment Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Authorize.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for test accounts so they will log into the Sandbox URL for API access. If this option is not set properly, your API login will fail.</inlineHelpText>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Key__c</fullName>
        <inlineHelpText>Authorize.Net only, required Transaction Key</inlineHelpText>
        <label>Transaction Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Payment Processor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Processor__c</columns>
        <columns>Default_Connection__c</columns>
        <columns>Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>